配置了exe文件

--- a/download.html
+++ b/download.html
@@ -187,14 +187,13 @@
         // 下载文件列表配置
         // 当您上传exe文件后，请在这里添加文件信息
         const downloadFiles = [
-            // 示例配置（请根据实际情况修改）
-            // {
-            //     name: "我的应用程序",
-            //     description: "应用程序的详细描述",
-            //     version: "1.0.0",
-            //     filename: "myapp.exe",
-            //     size: "10.5 MB"
-            // }
+            {
+                name: "LyrixSnap",
+                description: "LyrixSnap 应用程序",
+                version: "1.0.0",
+                filename: "LyrixSnap 1.0.0.exe",
+                size: "未知"
+            }
         ];
 
         function renderDownloads() {
